PolicyAnnouncementTopicExtractor pub/sub namespaced topics support
Signed-off-by: Aleksandar Stanchev <aleksandar.stanchev@bosch.com>